[package]
name = "snm"
version = "0.3.0"
authors = ["Oleg Keri <ezhi99@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "*"
serde = "0.8.23"
regex = "1.0.0"
serde_derive = "0.8.23"
toml = { version = "0.2", default-features = false, features = ["serde"] }
smoltcp = { version = "0.8.0", features = ["proto-dhcpv4"] }
rustbus = "0.17.0"
nix = "0.22.3"
ring = "*"